--- a/index.html
+++ b/index.html
@@ -89,12 +89,24 @@
         <p class="mailinglist__label">
             Sign up to receive updates on our PCMHGuide tool!
         </p>
-        <form class="mailinglist__form">
+        <!-- <form class="mailinglist__form">
             <input type="email" name="email" value="example@example.com" />
             <button type="submit">
                 Sign up
             </button>
+        </form> -->
+
+        <!-- Begin MailChimp Signup Form -->
+        <form action="https://miletwo.us17.list-manage.com/subscribe/post?u=7c8130c032f37bb4e5e45cb22&amp;id=60e6da2d09"
+            method="post" id="mc-embedded-subscribe-form"
+            name="mc-embedded-subscribe-form" class="mailinglist__form validate"
+            target="_blank" novalidate>
+                <input type="email" placeholder="you@example.com" name="EMAIL" id="mce-EMAIL">
+                <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_7c8130c032f37bb4e5e45cb22_60e6da2d09" tabindex="-1" value=""></div>
+                <button name="subscribe" id="mc-embedded-subscribe" type="submit">Sign up</button>
         </form>
+        <!--End mc_embed_signup-->
     </div>
 
 </section>
