Fix various a11y issues

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 
     <head>
 
@@ -8,7 +8,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="This site provides information about the new tool PCHMGuide that DAH Solutions, LLC is building in partnership with Mile Two, LLC that helps medical facilities plan, track, and obtain the NCQA PCMH recognition." />
 
     <link rel="canonical" href="/" />
@@ -33,7 +33,8 @@
         <header class="header">
     <h1 class="header__logo">
         <!-- img src="/images/dah-solutions-logo-w-tagline.png" alt="DAH Logo: begin with the end in mind" / -->
-        <svg xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" stroke-miterlimit="1.41421" viewBox="0 0 6048 1264" clip-rule="evenodd" stroke-linejoin="round">
+        <svg aria-label="DAH Solutions - begin with the end in mind" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" stroke-miterlimit="1.41421" viewBox="0 0 6048 1264" clip-rule="evenodd" stroke-linejoin="round">
+          <title>DAH Solutions - begin with the end in mind</title>
           <g transform="scale(2)">
             <clipPath id="a">
               <path d="M663.582 287.976h15.717V43.652h-40.531V3.693h144.425v39.959h-40.53v98.186H895.08V43.652h-41.101V3.693h144.996v39.959h-40.531v244.324h40.531v39.96H853.979v-39.96h41.101V181.798H742.663v106.178h40.53v39.96H541.117v-39.96h40.53l-27.972-81.631H442.36l-27.401 81.631h38.818v39.96H318.485v-39.96h38.247l89.053-244.324h-34.822V3.693h180.959v39.959H556.53l91.336 244.324h15.716zM454.347 168.098h87.911L500.586 44.223h-3.425l-42.814 123.875zM.255 287.976h39.959V43.652H.255V3.693h181.53c36.154 0 66.979 7.326 92.478 21.978 25.498 14.651 44.526 34.06 57.085 58.226 12.558 24.166 18.838 50.52 18.838 79.063 0 32.729-6.28 61.461-18.838 86.198-12.559 24.737-31.397 44.051-56.515 57.941-25.117 13.891-55.943 20.837-92.477 20.837H.255v-39.96zm172.967 0c37.676 0 65.553-11.227 83.63-33.68 18.077-22.454 27.115-52.518 27.115-90.194 0-34.632-9.134-63.365-27.401-86.199-18.267-22.834-45.477-34.251-81.631-34.251h-70.786v244.324h69.073z"/>
@@ -111,6 +112,7 @@
             method="post" id="mc-embedded-subscribe-form"
             name="mc-embedded-subscribe-form" class="mailinglist__form validate"
             target="_blank" novalidate>
+                <label for="mce-EMAIL">Email Address</label>
                 <input type="email" placeholder="you@example.com" name="EMAIL" id="mce-EMAIL">
                 <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                 <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_91da81e66be66e93bd04e11a8_c650a520a1" tabindex="-1" value=""></div>
@@ -154,7 +156,7 @@
   </div>
 
     <div class="about__testimonial">
-        <img src="/images/dayton-childrens-group.png" />
+        <img src="/images/dayton-childrens-group.png" alt="Group at Dayton Children's"/>
         <blockquote>
             <p>
                 &ldquo;
