--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
 
     <div class="product__details">
         <div class="details__description">
-            <h3>Now Featuring: PCMHGuide</h3>
+            <h3>Featuring: PCMHGuide</h3>
             <p>
-                This tool streamlines our consulting process in which we work with
+                This tool streamlines our consulting process in with
                 primary care leaders, practices, and systems to guide them through
                 the PCMH recognition process from start to finish. Our systematic
                 approach defines the scope of the project, analyzes current processes
-                and offers a holistic approach to implementing and reporting the
+                and provides a comprehensive approach to implementing and reporting the
                 real-time status of the project.
             </p>
         </div>
@@ -81,16 +81,15 @@
                 </li>
                 <li>
                     Quality reviews conducted  by our skilled experts providing
-                    feedback through the system with recommendations for you to
+                    feedback with recommendations so you can
                     achieve the best outcome possible.
                 </li>
                 <li>
-                    Dashboard displays your status that makes tracking your progress
+                    Dashboard displays of your status that make tracking your progress
                     and outcomes easy to see at a glance.
                 </li>
                 <li>
-                    Beautiful, intuitive interface that makes the process much less
-                    overwhelming!
+                    Beautiful, intuitive interface that simplifies the entire process!
                 </li>
             </ul>
         </div>
