--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                 </i>
             </p>
             <p class="staff__contact">
-                donna@dahsolutions.com <br />
+                <a href="mailto:donna@dahsolutions.com">donna@dahsolutions.com</a> <br />
                 (937) 219-8322
             </p>
         </li>
@@ -230,7 +230,7 @@
                 </i>
             </p>
             <p class="staff__contact">
-                ahedrick20@gmail.com <br />
+                <a href="mailto:ahedrick20@gmail.com">ahedrick20@gmail.com</a> <br />
                 (937) 321-4517
             </p>
         </li>
