Update with screenshot and ppt

--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@
                 and provides a comprehensive approach to implementing and reporting the
                 real-time status of the project.
             </p>
-        </div>
-        <div class="details__features">
+
             <h4>Features include:</h4>
             <ul>
                 <li>
@@ -92,6 +91,12 @@
                     Beautiful, intuitive interface that simplifies the entire process!
                 </li>
             </ul>
+        </div>
+
+        <div class="details__preview">
+            <p>
+                <a href="/images/DAHSolutionsPCMHGuide.pptx"><img src="/images/pptpreview.png" alt="PCMHGuide Preview" /></a>
+            </p>
         </div>
     </div>
 
